[tool.poetry]
name = "secureconnect"
version = "0.1.0"
description = "Detects nudity in a video stream"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
nudenet = "^1.1"
tensorflow = "=1.8"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sfw = "secureconnect:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
